[project]
name = "homework_design_code"
version = "2.1.4"
description = ""
authors = [
    {name = "Victor"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"
black = "^25.1.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
types-requests = "^2.32.4.20250913"

[tool.black]
line-length = 119
exclude = 'git'

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
